<resources>
    <string name="app_name">MovieReviews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="movie_poster_content_desc">Movie Poster</string>
    <string name="label_overview">Overview:</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_all_favorites">Delete All Favorites</string>
    <string name="language">Language</string>
    <string name="share_apk">Share Apk</string>
    <string name="theme">Theme</string>
    <string name="network_error_text">NO INTERNET</string>
    <string name="retry_button_label">RETRY</string>
</resources>