<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="12dp"
    app:cardBackgroundColor="#EFEDED"
    app:cardCornerRadius="28dp"
    app:cardElevation="8dp"
    tools:context=".ui.bottomsheetnav.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_language"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_language"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_arrow_right_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/ll_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_theme"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_theme"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/theme"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_arrow_right_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_delete"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/delete_all_favorites"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_arrow_right_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/ll_share_apk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_share_apk"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_share"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_share_apk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/share_apk"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_arrow_right_4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/ll_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_contact_us"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_mail"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_arrow_right_5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>